--- a/ansible.yml
+++ b/ansible.yml
@@ -1,10 +1,10 @@
 ---
-- name: system informations
-  hosts: node1,node2,node3
+- name: installation of httpd
+  hosts: node1
   tasks:
-   - name: system information
-     copy:
-      content: "{{ ansible_hostname }} \n {{ansible_processor_count}}
-      dest: /var/tmp/sysinfo.html
-      mode: 0644
-...
+   - name: Just installation
+	 command: yum install -y docker
+   - name: Just installation
+	 command: docker run -dit --name gopi -p 80:80 httpd
+   - name: Just installation
+	 command: service docker start
